tests/security/doTaintSpecializedInstanceProperty/output.txt
ERROR: TaintedData - input.hack:12:6 - Detected tainted HTML tags